syntax = "proto3";

package auth;
option go_package = "github.com/JIEEEN/grpc-board";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc MailVerification (MailVerificationRequest) returns (MailVerificationResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginResponse {
    bool result = 1;
    string accessToken = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string nickname = 3;
}
message RegisterResponse {
    bool result = 1;
}

message LogoutRequest {
    string id = 1;
}
message LogoutResponse {
    bool result = 1;
}

message MailVerificationRequest {
    string vcode = 1;
    string email = 2;
    string password = 3;
    string nickname = 4;
}
message MailVerificationResponse {
    bool result = 1;
}